libtracker-miner: Support indexing non-native directories

https://bugzilla.gnome.org/show_bug.cgi?id=792337